--- a/client/src/components/Navbar.module.css
+++ b/client/src/components/Navbar.module.css
@@ -3,18 +3,23 @@
 .container {
   margin: 50px;
   display: flex;
-  align-self: flex-start;
+  justify-content: space-between;
 }
 
-.container > * {
+.container * {
   text-decoration: none;
-}
-
-h1 {
-  font-family: "Archivo Black", sans-serif;
-  font-style: italic;
   text-shadow: -1px -1px 0 antiquewhite, 1px -1px 0 antiquewhite,
     -1px 1px 0 antiquewhite, 1px 1px 0 antiquewhite;
   color: black;
+  font-family: "Archivo Black", sans-serif;
+  font-style: italic;
+}
+
+h1 {
   font-size: 50px;
+}
+
+nav a {
+  font-size: 20px;
+  margin-left: 30px;
 }
