--- a/client/src/index.css
+++ b/client/src/index.css
@@ -13,7 +13,52 @@ body {
   color: antiquewhite;
 }
 
-#root {
-  /* height: 100vh; */
-  /* border: 1px solid; */
+.login-signup {
+  width: 300px;
+  backdrop-filter: blur(20px);
+  box-shadow: 0 0 4px 1px rgba(0, 0, 0, 0.2);
+  border-radius: 10px;
+  padding: 20px;
+  display: flex;
+  flex-direction: column;
+  gap: 10px;
+  align-self: center;
+}
+
+.login-signup h2 {
+  align-self: center;
+}
+
+.login-signup input {
+  border-radius: 5px;
+  height: 20px;
+  padding: 0 3px;
+  border: 1px solid black;
+  outline: none;
+  background: antiquewhite;
+}
+
+.login-signup button {
+  align-self: center;
+  background-color: antiquewhite;
+  border-radius: 5px;
+  font-weight: bold;
+  font-size: 20px;
+  border: 1px solid;
+  transition: background-color 0.5s ease-in-out, color 0.5s ease-in-out;
+  margin-top: 10px;
+  padding: 3px 10px;
+}
+
+.login-signup button:hover {
+  cursor: pointer;
+  background-color: black;
+  color: antiquewhite;
+}
+
+.login-signup .error {
+  margin-top: 10px;
+  color: red;
+  text-align: center;
+  grid-area: auto / span 2;
 }
