Scroll bar and height adjustements

--- a/client/src/routes/Home.module.css
+++ b/client/src/routes/Home.module.css
@@ -31,8 +31,8 @@
   background: antiquewhite;
 }
 
-/* @supports (scrollbar-color: antiquewhite transparent) {
+@supports (scrollbar-color: antiquewhite transparent) {
   * {
     scrollbar-color: antiquewhite transparent;
   }
-} */
+}
