--- a/client/src/routes/Home.module.css
+++ b/client/src/routes/Home.module.css
@@ -18,9 +18,9 @@
   overflow: auto;
 }
 
-::-webkit-scrollbar {
-  width: 10px;
-}
+/* ::-webkit-scrollbar {
+  width: 0.5vw;
+} */
 
 ::-webkit-scrollbar-track {
   background: transparent;
@@ -34,5 +34,6 @@
 @supports (scrollbar-color: antiquewhite transparent) {
   * {
     scrollbar-color: antiquewhite transparent;
+    scrollbar-width: thin;
   }
 }
