--- a/client/src/App.module.css
+++ b/client/src/App.module.css
@@ -1,5 +1,16 @@
 .pages {
   display: flex;
-  flex-direction: column;
   height: 75vh;
+  gap: 5vh;
+  justify-content: space-evenly;
+  flex-wrap: wrap;
+}
+
+@media (max-width: 1100px) {
+  .pages {
+    height: auto;
+    margin: 1rem;
+    justify-content: center;
+    align-items: center;
+  }
 }
