--- a/client/src/components/TicTacToe/Inputs.module.css
+++ b/client/src/components/TicTacToe/Inputs.module.css
@@ -16,6 +16,8 @@
   padding: 0 3px;
 }
 
-.playerSelect {
-  /* background-color: black; */
+@media (max-width: 390px) {
+  .setDiffForm {
+    width: 40vw;
+  }
 }
