--- a/client/src/components/TicTacToe/TicTacToe.module.css
+++ b/client/src/components/TicTacToe/TicTacToe.module.css
@@ -1,13 +1,11 @@
 .TicTacToe {
   backdrop-filter: blur(20px);
   border-radius: 10px;
-  max-width: 450px;
+  height: 434;
+  width: 332px;
   padding: 30px;
-  position: absolute;
-  /* top: 43%; */
-  right: 10%;
-  /* transform: translate(-50%, -50%); */
   text-align: center;
+  align-self: flex-start;
 }
 
 .TicTacToe > h3 {
@@ -29,13 +27,26 @@
   transform: scale(1.5);
 }
 
+@media (max-width: 1250px) {
+  .TicTacToe {
+    padding: 20px;
+    align-self: center;
+  }
+}
+
+@media (max-width: 390px) {
+  .TicTacToe {
+    padding: 10px;
+    height: auto;
+    width: auto;
+  }
+}
+
+/* Animation */
+
 .TicTacToe {
   animation: roadRunnerIn 0.3s cubic-bezier(0.165, 0.84, 0.44, 1) forwards;
 }
-
-/* .TicTacToe > * {
-  animation: roadRunnerIn 0.3s cubic-bezier(0.165, 0.84, 0.44, 1) forwards;
-} */
 
 .out {
   animation: roadRunnerOut 0.5s cubic-bezier(0.165, 0.84, 0.44, 1) forwards;
@@ -61,27 +72,7 @@
     transform: translateX(-30px) skewX(-5deg) scaleX(0.9);
   }
   100% {
+    /* "overflow-x: hidden" in body */
     transform: translateX(1500px) skewX(30deg) scaleX(1.3);
   }
 }
-
-/* .five {
-    transform:scale(1);
-    .modal-background {
-      background:rgba(0,0,0,.0);
-      animation: fadeIn .5s cubic-bezier(0.165, 0.840, 0.440, 1.000) forwards;
-      .modal {
-        transform:translateX(-1500px);
-        animation: roadRunnerIn .3s cubic-bezier(0.165, 0.840, 0.440, 1.000) forwards;
-      }
-    }
-    &.out {
-      animation: quickScaleDown 0s .5s linear forwards;
-      .modal-background {
-        animation: fadeOut .5s cubic-bezier(0.165, 0.840, 0.440, 1.000) forwards;
-        .modal {
-          animation: roadRunnerOut .5s cubic-bezier(0.165, 0.840, 0.440, 1.000) forwards;
-        }
-      }
-    }
-  } */
