--- a/client/src/components/WorkoutForm.module.css
+++ b/client/src/components/WorkoutForm.module.css
@@ -57,3 +57,9 @@ div.error {
   text-align: center;
   grid-area: auto / span 2;
 }
+
+@media (max-width: 1250px) {
+  .create {
+    align-self: center;
+  }
+}
